--- a/public/css/style.css
+++ b/public/css/style.css
@@ -18,7 +18,6 @@ img {
     height: auto;
 }
 
-
 /* ========================== VARIABLE ========================== */
 :root {
     --hue: 159;
@@ -36,40 +35,22 @@ html {
 }
 
 body {
-    font: 400 1rem var(--body-font);
-    color: var(--text-color);
-    background: var(--body-color);
+  font: 400 1.6rem var(--body-font);
+  color: var(--text-color);
+  background: var(--body-color);
+}
+
+.title {
+  font: 700 1.6rem var(--title-font);
+  color: var(--title-color);
+  -webkit-font-smoothing: auto;
 }
 
 /*====  LAYOUT ============================ */
 .container {
-    margin-left: 2.4rem;
-    margin-right: 2.4rem;
-}
-
-.grid {
-  display: grid;
-  gap: 2rem;
-}
-
-.section {
-  padding: calc(8rem + var(--header-height)) 0;
-}
-
-.section .title {
-  margin-bottom: 1.6rem;
-}
-
-.section .subtitle {
-  font-size: var(--subtitle-font-size);
-}
-
-.section header {
-  margin-bottom: 6.4rem;
-}
-
-.section header strong {
-  color: var(--base-color);
+  width: 100%;
+  margin-left: 2.4rem;
+  margin-right: 2.4rem;
 }
 
 #header {
@@ -88,113 +69,25 @@ body {
 #header.scroll {
   box-shadow: 0px 0px 12px rgba(0, 0, 0, 0.15);
 }
-  
+
+.grid {
+  display: grid;
+  gap: 2rem;
+}
 
 /*====  NAVIGATION ============================ */
 nav {
-    height: 7.2rem;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    width: 100%; 
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 3rem;
 }
 
 nav a {
-    font-size: 1.6rem;
-    font-family: 'Montserrat', sans-serif;
+  font-size: 1.4rem;
 }
 
-nav ul li {
-    text-align: center;
+nav ul {
+  display: flex;
 }
-
-nav ul li a {
-  transition: color 0.2s;
-  position: relative;
-}
-
-nav ul li a:hover,
-nav ul li a.active {
-  color: var(--base-color);
-}
-
-nav ul li a::after {
-  content: '';
-  width: 0%;
-  height: 2px;
-  background: var(--base-color);
-
-  position: absolute;
-  left: 0;
-  bottom: -1.5rem;
-
-  transition: width 0.2s;
-}
-
-nav ul li a:hover::after,
-nav ul li a.active::after {
-  width: 100%;
-}
-
-nav .menu {
-  opacity: 0;
-  visibility: hidden;
-  top: -20rem;
-  transition: 0.2s;
-}
-
-nav .menu ul {
-  display: none;
-}
-
-/* Mostrar menu */
-nav.show .menu {
-  opacity: 1;
-  visibility: visible;
-
-  background: var(--body-color);
-
-  height: 100vh;
-  width: 100vw;
-
-  position: fixed;
-  top: 0;
-  left: 0;
-
-  display: grid;
-  place-content: center;
-}
-
-nav.show .menu ul {
-  display: grid;
-}
-
-nav.show ul.grid {
-  gap: 4rem;
-}
-
-/* toggle menu */
-.toggle {
-  color: var(--base-color);
-  font-size: 1.5rem;
-  cursor: pointer;
-}
-
-nav .icon-close {
-  visibility: hidden;
-  opacity: 0;
-
-  position: absolute;
-  top: -1.5rem;
-  right: 1.5rem;
-
-  transition: 0.2s;
-}
-
-nav.show div.icon-close {
-  visibility: visible;
-  opacity: 1;
-  top: 1.5rem;
-}
-
 
