--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -21,16 +21,13 @@
             <a class="logo" href="#">Vinicius<span>Holtman</span>.</a>
 
             <div class="menu">
-                <ul class="grid">
-                    <li><a class="title"  href="#home">Home</a></li>
-                    <li><a class="title" href="#demo">Demo</a></li>
-                    <li><a class="title" href="#about">About</a></li>
-                    <li><a class="title" href="#contact">Contact</a></li>
+                <ul>
+                    <li><a href="#home">Home</a></li>
+                    <li><a href="#demo">Demo</a></li>
+                    <li><a href="#about">About</a></li>
+                    <li><a href="#contact">Contact</a></li>
                 </ul>
             </div>
-            <!-- menu -->
-            <div class="toggle icon-menu"></div>
-            <div class="toggle icon-close"></div>
         </nav>
     </header>
 
